test/parser/cases/valid/small/compound_assign.cp
main()
{
    let value: i32 = 1;
    value += 2;
    value <<= 1;
}
