test/parser/cases/invalid/small/missing_if_paren.cp
main()
{
    if(value < 1 {
        return 0;
    }
}
